Solve content shifting to the left when mobile menu is open

--- a/assets/css/ie.css
+++ b/assets/css/ie.css
@@ -4988,6 +4988,7 @@ h2.page-title {
 
 .primary-navigation-open .menu-button-container #primary-mobile-menu {
 	display: flex;
+	margin-top: 0;
 }
 
 .primary-navigation {
@@ -5271,6 +5272,8 @@ h2.page-title {
 	.lock-scrolling .site {
 		position: fixed;
 		max-width: 100%;
+		left: 0;
+		right: 0;
 	}
 }
 
