--- a/style.css
+++ b/style.css
@@ -3662,6 +3662,7 @@ h2.page-title {
 
 .primary-navigation-open .menu-button-container #primary-mobile-menu {
 	display: flex;
+	margin-top: 0;
 }
 
 .primary-navigation {
@@ -3937,6 +3938,8 @@ h2.page-title {
 	.lock-scrolling .site {
 		position: fixed;
 		max-width: 100%;
+		left: 0;
+		right: 0;
 	}
 }
 
